--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <h1>Hello git</h1>
+  <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of
+    a document or a typeface without relying on meaningful content.</p>
 </body>
+
 </html>
