--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Hello git</h1>
+  <p>What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 </body>
 </html>
